TAG: gxdhtload-6-0-6-6
TAG: gxdhtload-6-0-6-5
DATE: 10/19/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US111 - Import PubMed IDs from GEO
second tag clarified GXD for MGD and updated some QC labels

TAG: gxdhtload-6-0-6-4
DATE: 09/29/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US30 - Process 4 years worth of data weekly/find new PubMed IDs

TAG: gxdhtload-6-0-6-3
DATE: 09/13/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1)US22 and US70 (load implementation)

TAG: gxdhtload-6-0-6-2
TAG: gxdhtload-6-0-6-1
DATE: 08/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) US23 Load QC