@@ -1,3 +1,9 @@
+TAG: gxdhtload-6-0-6-7
+DATE: 10/19/2016
+STAFF: sc
+CHANGES: TR12370 Project GXD HT
+1) US108 - Clean up URLs that appear in description fields.
+
 TAG: gxdhtload-6-0-6-6
 TAG: gxdhtload-6-0-6-5
 DATE: 10/19/2016
